revised saving proof scripts